syntax = "proto3";

package pb;

//import "person.proto";

option go_package = "testmongo/pb";

service TestGrpc {
  rpc CreatePerson (CreatePersonRequest) returns (CreatePersonResponse){}
  rpc GetListPerson (GetListPersonReq) returns (GetListPersonRes) {}
}

message CreatePersonRequest {
  string name = 1;
  int64 age = 2;
  string bio = 3;
}

message CreatePersonResponse {
  string id = 1;
  string name = 2;
  int64 age = 3;
  string bio = 4;
}

message GetListPersonReq {
  int64 page = 1;
  int64 per_page =2;
}

message GetListPersonRes {
  repeated Person people = 1;
}

message Person {
  string id = 1;
  string name = 2;
  int64 age = 3;
  string bio = 4;
}